# gppop

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: driver_script  env.sh  gwtc-4.yaml
examples/BGP_m1m2chi/: gwtc4-clean_m1m2chi.ipynb  run_gppop_m1m2chi.py
examples/BGP_m1m2chi/data/: config.yaml  gp_inputs_newbins3_m1m2chi.txt  vt_means_GWTC4_newbins3_m1m2chi.txt  vt_sigmas_GWTC4_newbins3_m1m2chi.txt  vts_GWTC4_IFAR1_newbins3_m1m2chi.txt
examples/BGP_m1m2z/: curate_plots_m1m2z.ipynb  gwtc4-clean_m1m2z.ipynb  run_gppop_m1m2z.py
examples/BGP_m1m2z/data/: config.yaml  gp_inputs_newbins3_m1m2z.txt  vt_means_GWTC4_newbins3_m1m2z.txt  vt_sigmas_GWTC4_newbins3_m1m2z.txt  vts_GWTC4_IFAR1_newbins3_m1m2z.txt  zbins_m1m2z.txt
examples/BGP_m1qchi/: gwtc4-clean_m1qchi.ipynb  run_gppop_m1qchi.py
examples/BGP_m1qchi/data/: config.yaml  gp_inputs_newbins3_m1qchi.txt  vt_means_GWTC4_newbins3_m1qchi.txt  vt_sigmas_GWTC4_newbins3_m1qchi.txt  vts_GWTC4_IFAR1_newbins3_m1qchi.txt
implementation/: Inference_clean_with_q_n_eff44_opt_case_9mdo.ipynb
implementation/run-dir-gwtc4/: gwtc4-clean_with_q_case_9mdo.ipynb
implementation/run-dir-gwtc4/Case_9mdo/: chi_bins_new3_with_q_case_9mdo.txt  gp_inputs_newbins3_with_q_case_9mdo.txt  mbins_with_q_case_9mdo.txt  qbins_with_q_case_9mdo.txt  run_gppop_with_q_case_9mdo_n_eff44_opt.py  vt_means_GWTC4_newbins3_with_q_case_9mdo.txt  vt_sigmas_GWTC4_newbins3_with_q_case_9mdo.txt  vts_GWTC4_IFAR1_m1m2chi_newbins3_with_q_case_9mdo.txt
src/gppop/: core.py  core_m1m2chi.py  core_m1m2z.py  core_m1qchi.py  core_old.py  core_spin-q.py  core_spin_q.py  cosmo_core.py  gppop.py  io.py  toeplitz_gp.py
src/gppop/inference/: hirerarchical_bgp_model.py  nuts_sampler.py
src/gppop/models/: fixed_cosmo.py
src/gppop/utils/: bgp.py  cosmo.py  gw.py
src/lib/: toeplitz_cholesky.f90
