[project]
name = "gppop"  # Required
version = "0.0.2"  # Required
description = "Non-parametric inference of the population of compact binaries from gravitational wave observations using binned Gaussian processes. Methods paper: https://arxiv.org/abs/2304.08046"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Anarya Ray", email = "anarya@uwm.edu" },
  {name = "Siddharth Mohite", email = "srmohite@uwm.edu" },
  {name = "Ignacio Maga\~na Hernandez", email = "imhernan@andrew.cmu.edu" },
  # Optional
]
maintainers = [
  {name = "Anarya Ray", email = "anarya@uwm.edu" } # Optional
]

dependencies = [ # Optional
  "numpy",
  "scipy",
  "h5py",
  "astropy",
  "arviz",
  "jax[cuda12]",
  "numpyro",
  "pesummary",
  "jaxinterp2d@git+https://github.com/adam-coogan/jaxinterp2d.git"
]

[tool.poetry.scripts]
"run_gppop" = {source = "bin/run_gppop"}

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
