[project]
name = "gppop"  # Required
version = "0.0.1"  # Required
description = "Non-parametric inference of the population of compact binaries from gravitational wave observations using binned Gaussian processes. Methods paper: https://arxiv.org/abs/2304.08046"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Anarya Ray", email = "anarya@uwm.edu" }
  {name = "Siddharth Mohite", email = "srmohite@uwm.edu" }
  {name = "Omkar Sridhar", email = "omkarnm1401@gmail.com" } # Optional
]
maintainers = [
  {name = "Anarya Ray", email = "anarya@uwm.edu" }
  {name = "Omkar Sridhar", email = "omkarnm1401@gmail.com" } # Optional
]

dependencies = [ # Optional
  "numpy",
  "scipy",
  "h5py",
  "pymc == 4.0.0b6",
  "aesara == 2.5.1",
  "astropy",
  "scikit-learn == 1.2.0",
  "arviz == 0.14.0",
  "pesummary",
  "popsummary@git+https://git.ligo.org/zoheyr-doctor/popsummary.git",
  "gwdistributions@git+https://git.ligo.org/reed.essick/gw-distributions.git"
]

[tool.poetry.scripts]
"run_gppop_m1m2z" = {source = "bin/run_gppop_m1m2z"}
"run_gppop_m1m2chi" = {source = "bin/run_gppop_m1m2chi"}
"run_gppop_m1qchi" = {source = "bin/run_gppop_m1qchi"}

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
